metadata/force-app/main/default/objects/CustomName_EWTUL__c/CustomName_EWTUL__c.object-meta.xml
<CustomObject>
    <description>Description_IMNyo</description>
    <label>CustomLabel_FvtyQ</label>
    <nameField>
        <label>CustomLabel_FvtyQ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_FvtyQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>