metadata/force-app/main/default/objects/CustomName_EWTUL__c/fields/CustomField_foGCc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_foGCc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldsmWCc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>