metadata/force-app/main/default/objects/CustomName_EWTUL__c/fields/CustomField_QXcND__c.field-meta.xml
<CustomField>
    <fullName>CustomField_QXcND__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldldCFJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>